fix height of horizontal scrollbar

--- a/cms/web.css
+++ b/cms/web.css
@@ -138,7 +138,7 @@ h3 {margin-top: 30px; font-size:15pt; }
 #clanek th { border:1px solid silver; background:silver; }
 
 /*scrollbar*/
-::-webkit-scrollbar {top: 350px;width: 8px; margin-right: 5px; background: transparent;}
+::-webkit-scrollbar {width: 8px; height: 8px;margin-right: 5px; background: transparent;}
 ::-webkit-scrollbar-track {background: transparent; margin: 10px 0;}
 ::-webkit-scrollbar-thumb {background: #888; border-radius: 10px; }
 ::-webkit-scrollbar-thumb:hover {background: #555;}
